--- a/voting/polls/templates/polls/index.html
+++ b/voting/polls/templates/polls/index.html
@@ -1,10 +1,6 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <meta charset="utf-8">
-        <title>Polls Page</title>
-    </head>
-    <body>
+{% extends 'polls/base.html' %}
+{% block title %}Polls{% endblock %}
+{% block body_block %}    
     {% if latest_questions %}
         <ul>
         {% for question in latest_questions %}
@@ -14,5 +10,4 @@
     {% else %}
         <p>No polls are available.</p>
     {% endif %}
-    </body>
-</html>
+{% endblock %}
